testsuite/single/tests/compiler/fail/div_zero.c
void foo(mixed x) {
    switch(x) {
    case 1 / 0:
    }
}
